<resources>
    <string name="app_name">RentACar</string>
    <string-array name="SpinnerItems">
        <item>@string/white</item>
        <item>@string/grey</item>
        <item>@string/black</item>
        <item>@string/silver</item>
        <item>@string/blue</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="white">White</string>
    <string name="grey">Grey</string>
    <string name="black">Black</string>
    <string name="silver">Silver</string>
    <string name="blue">Blue</string>
    <string name="toastKilometer">Introduce kilometers</string>
    <string name="toastLicense">Introduce license</string>
    <string name="toastModel">Introduce model</string>
    <string name="create_car">create car</string>
    <string name="filter_by_license">filter by license...</string>
    <string name="modelTextView">Model:</string>
    <string name="licenseTextView">License:</string>
    <string name="colorTextView">Color:</string>
    <string name="kmTextView">Km:</string>
    <string name="modelEditText">Insert model</string>
    <string name="licenseEditText">Insert license</string>
    <string name="kmEditText">Insert kilometres</string>
    <string name="editButton">Edit</string>
    <string name="deleteButton">Delete</string>
    <string name="searchButton">Search</string>
</resources>